<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".RegisterActivity"
android:background="@color/lightGreen">


<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="30dp"
    app:cardBackgroundColor="@color/darkGreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/darkGreen">

        <TextView
            android:id="@+id/textView_register_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/lightGreen"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textAlignment="center"
            android:text="@string/create_a_quick_n_easy_meals_account" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="30dp"
            android:layout_below="@+id/textView_register_head"
            app:cardBackgroundColor="@color/lightGreen">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_margin="15dp"
                android:background="@color/lightGreen">

                <TextView
                    android:id="@+id/textView_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkGreen"
                    android:text="@string/username"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/darkGreen"
                    android:textSize="12sp"
                    android:padding="16dp"
                    android:textColor="@color/darkGreen"
                    android:layout_marginTop="6dp"
                    android:layout_below="@+id/textView_register_name"
                    android:background="@drawable/border"/>

                <TextView
                    android:id="@+id/textView_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkGreen"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/editText_register_name"/>

                <EditText
                    android:id="@+id/editText_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/darkGreen"
                    android:textSize="12sp"
                    android:padding="16dp"
                    android:textColor="@color/darkGreen"
                    android:layout_marginTop="6dp"
                    android:layout_below="@+id/textView_register_email"
                    android:background="@drawable/border"/>

                <TextView
                    android:id="@+id/textView_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkGreen"
                    android:text="@string/password"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/editText_register_email"/>

                <EditText
                    android:id="@+id/editText_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/darkGreen"
                    android:textSize="12sp"
                    android:padding="16dp"
                    android:textColor="@color/darkGreen"
                    android:layout_marginTop="6dp"
                    android:layout_below="@+id/textView_register_password"
                    android:background="@drawable/border"/>

                <TextView
                    android:id="@+id/textView_allergies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkGreen"
                    android:text="@string/select_allergies"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/editText_register_password" />
                <LinearLayout
                    android:id="@+id/allergies_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_below="@+id/textView_allergies"
                    android:orientation="vertical">
                    <CheckBox
                        android:id="@+id/checkbox_gluten"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allergy_gluten"
                        android:textColor="@color/darkGreen" />
                    <CheckBox
                        android:id="@+id/checkbox_nuts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allergy_nuts"
                        android:textColor="@color/darkGreen" />
                    <CheckBox
                        android:id="@+id/checkbox_lactose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allergy_lactose"
                        android:textColor="@color/darkGreen" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/darkGreen"
                    android:textColor="@color/lightGreen"
                    android:layout_below="@+id/allergies_layout"
                    android:text="@string/register"/>

                <TextView
                    android:id="@+id/textView_or"
                    android:text="@string/or_if_you_already_have_an_account"
                    android:textColor="@color/darkGreen"
                    android:layout_marginTop="30dp"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_below="@id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/textView_clickable_login"
                    android:text="@string/login"
                    android:textColor="@color/accent"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_below="@id/textView_or"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
</ScrollView>