<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/lightGreen">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/darkGreen">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:background="@color/darkGreen">

            <TextView
                android:id="@+id/textView_login_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textColor="@color/lightGreen"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textAlignment="center"
                android:text="@string/login_to_your_quick_n_easy_recipes_account" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                app:cardCornerRadius="30dp"
                android:layout_below="@+id/textView_login_head"
                app:cardBackgroundColor="@color/lightGreen">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_margin="15dp"
                    android:background="@color/lightGreen">

                    <TextView
                        android:id="@+id/textView_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkGreen"
                        android:text="@string/email"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editText_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/darkGreen"
                        android:textSize="12sp"
                        android:padding="16dp"
                        android:textColor="@color/darkGreen"
                        android:layout_marginTop="6dp"
                        android:layout_below="@+id/textView_login_email"
                        android:background="@drawable/border"/>

                    <TextView
                        android:id="@+id/textView_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkGreen"
                        android:text="@string/password"
                        android:textSize="16sp"
                        android:layout_marginTop="15dp"
                        android:layout_below="@+id/editText_login_email"/>

                    <EditText
                        android:id="@+id/editText_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:textColorHint="@color/darkGreen"
                        android:textSize="12sp"
                        android:padding="16dp"
                        android:textColor="@color/darkGreen"
                        android:layout_marginTop="6dp"
                        android:layout_below="@+id/textView_login_password"
                        android:background="@drawable/border"/>

                    <Button
                        android:id="@+id/button_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_centerHorizontal="true"
                        android:backgroundTint="@color/darkGreen"
                        android:textColor="@color/lightGreen"
                        android:layout_below="@+id/editText_login_password"
                        android:text="@string/login"/>

                    <TextView
                        android:id="@+id/textView_or_register"
                        android:text="@string/or_if_you_don_t_have_an_account"
                        android:textColor="@color/darkGreen"
                        android:layout_marginTop="30dp"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:layout_below="@id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/textView_clickable_register"
                        android:text="@string/register"
                        android:textColor="@color/accent"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_below="@id/textView_or_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>