<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen"
    tools:context=".MainActivity">

    <!-- Toolbar at the top -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkGreen">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/about_app"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/lightGreen"
                android:layout_alignParentStart="true"
                android:gravity="center" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_toolbar"
        android:layout_above="@id/bottom_toolbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/darkGreen"
            android:layout_margin="20dp"
            android:padding="20dp"
            app:cardCornerRadius="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/darkGreen">

                <LinearLayout
                    android:id="@+id/linearLayout_about_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_about_clicked"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_app_2"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textColor="@color/lightGreen"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/ic_about_clicked"/>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_about_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/lightGreen"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="30dp"
                    android:layout_below="@id/linearLayout_about_header">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkGreen"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:layout_margin="10dp"
                        android:text="@string/about_message"/>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </ScrollView>


    <LinearLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:elevation="10dp"
        android:gravity="center"
        android:background="@color/darkGreen"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/home_layout"
            android:background="@drawable/background_buttons"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/home_image"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_home"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/favorite_layout"
            android:background="@drawable/background_buttons"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/favorite_image"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_favorite"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_layout"
            android:background="@drawable/background_buttons"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_profile"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_layout"
            android:background="@drawable/background_buttons_clicked"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/about_image"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_about_clicked"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
